test/libsolidity/syntaxTests/literals/hex_string_leading_underscore.sol
contract C {
    function f() public pure {
        hex"_1234";
    }
}
// ----
// ParserError: (52-57): Invalid use of number separator '_'.
